--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,17 @@ defmt = "0.2"
 defmt-rtt = "0.2"
 panic-probe = { version = "0.2.0", features = ["print-defmt"] }
 
-drogue-device = { git = "https://github.com/drogue-iot/drogue-device", branch = "main", default-features = false, features = ["defmt", "defmt-info", "wifi+esp8266"] }
-cortex-m-rt = "0.6"
+#drogue-device = { git = "https://github.com/drogue-iot/drogue-device", rev = "68866e8a9c636e672c57a3c80ff76e58f2e098a8", features = ["defmt", "defmt-info", "wifi+esp8266"], default-features = false }
+drogue-device = { git = "https://github.com/drogue-iot/drogue-device", rev = "68866e8a9c636e672c57a3c80ff76e58f2e098a8", features = ["defmt", "defmt-info", "time"], default-features = false }
+
+cortex-m-rt = "0.7"
 cortex-m = { version = "0.7", features = ["inline-asm"] }
 
-embassy = { git = "https://github.com/drogue-iot/embassy.git", branch = "master", default-features = false, features=["defmt"] }
-embassy-stm32 = { git = "https://github.com/drogue-iot/embassy.git", branch = "master", default-features = false, features = ["defmt", "stm32l432kc"] }
+embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb697a265752644d835edce27efbb20d5557b297", default-features = false, features = [ "time" ] }
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb697a265752644d835edce27efbb20d5557b297", default-features = false, features = ["defmt", "stm32l432kc", "time-driver-tim2", "unstable-pac"] }
 
-stm32l4 = { version = "0.13", features = ["stm32l4x2" ] }
-stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x2"] }
+#stm32l4 = { version = "0.12", features = ["stm32l4x2" ] }
+#stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x2"] }
 
 embedded-hal = { version = "0.2.4", features = ["unproven"] }
 
@@ -35,10 +37,8 @@ heapless = "0.7"
 libm = "0.2"
 memchr = { version = "2.4", default-features = false }
 
-#embassy = {path = "../../../../../embassy/embassy", default-features = false}
-#embassy-stm32 = {path = "../../../../../embassy/embassy-stm32", default-features = false, features = ["stm32l072cz"] }
-
 [features]
+wifi = []
 display = []
 default = [
     "defmt-default",
@@ -51,13 +51,10 @@ defmt-warn = []
 defmt-error = []
 
 [patch.crates-io]
-cortex-m = { git = "https://github.com/rust-embedded/cortex-m.git", branch = "master", features = ["device"] }
-
-[patch."https://github.com/drogue-iot/drogue-device"]
-drogue-device = { path = "../drogue-device/device" }
-[patch."https://github.com/drogue-iot/embassy"]
-embassy = { path = "../embassy/embassy" }
-embassy-stm32 = { path = "../embassy/embassy-stm32" }
+#cortex-m = { git = "https://github.com/rust-embedded/cortex-m.git", branch = "master", features = ["device"] }
+embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb697a265752644d835edce27efbb20d5557b297" }
+#embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb697a265752644d835edce27efbb20d5557b297" }
+embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb697a265752644d835edce27efbb20d5557b297" }
 
 [profile.release]
 codegen-units = 1
